ADD: product component

--- a/frontend/src/app/form-product/form-product.component.html
+++ b/frontend/src/app/form-product/form-product.component.html
@@ -29,15 +29,5 @@
 <button mat-stroked-button color="primary" (click)="onSubmit()">Agregar</button>
 
 <p *ngFor="let product of products">
-  {{ product }}
+  <product-card></product-card>
 </p>
-
-<br><br>
-
-<div class="contenedor" >
-  <mat-card>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-    <mat-card-title>Hola Mundo</mat-card-title>
-    <mat-card-content>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis numquam eum voluptate quia et modi nesciunt tempora laboriosam cumque id, labore repellendus, possimus nostrum hic amet facere maiores necessitatibus ullam voluptatum. Ut veniam sunt animi sed repellendus consequatur ea, commodi perferendis itaque explicabo dolor possimus vero, deleniti, ipsa beatae.</mat-card-content>
-  </mat-card>
-</div>
