--- a/frontend/src/app/components/form-product/form-product.component.html
+++ b/frontend/src/app/components/form-product/form-product.component.html
@@ -9,7 +9,7 @@
 
   <mat-form-field appearance="legacy">
     <mat-label>Descripción</mat-label>
-    <textarea matInput name="description" placeholder="Ej: En diferentes colores" ngModel description="ngModel" required></textarea>
+    <textarea matInput name="description" placeholder="Ej: En diferentes colores" ngModel description="ngModel"></textarea>
   </mat-form-field>
 
   <br>
