ADD: service products

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
 <main>
-  <form-product (onSubmitProduct)="productCreated($event)" ></form-product>
-  <product-card [products]="storedProducts" ></product-card>
+  <form-product></form-product>
+  <product-card></product-card>
 </main>
