ADD: get products of backend

--- a/frontend/src/app/components/form-product/form-product.component.html
+++ b/frontend/src/app/components/form-product/form-product.component.html
@@ -21,7 +21,7 @@
 
   <mat-form-field appearance="legacy">
     <mat-label>Imagen</mat-label>
-    <input matInput name="image" placeholder="https://producto.jpg" ngModel image="ngModel" required>
+    <input matInput name="imgUrl" placeholder="https://producto.jpg" ngModel imgUrl="ngModel" required>
   </mat-form-field>
 
   <br>
