--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -4,6 +4,10 @@
       <img mat-card-image src="{{ product.imgUrl }}">
       <mat-card-title>{{ product.title }} - $ {{ product.price }}</mat-card-title>
       <mat-card-content>{{ product.description }}</mat-card-content>
+      <mat-card-actions>
+        <button mat-stroked-button color="primary">Editar</button>
+        <button mat-stroked-button color="warn" (click)="deleteProduct(product._id)">Eliminar</button>
+      </mat-card-actions>
     </mat-card>
   </div>
 </div>
