--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
 
 <main>
-  <form-product></form-product>
-  <product-card></product-card>
+  <router-outlet></router-outlet>
 </main>
