--- a/frontend/src/app/components/form-product/form-product.component.css
+++ b/frontend/src/app/components/form-product/form-product.component.css
@@ -1,3 +1,14 @@
+.grid {
+  display: inline-grid;
+  grid-template-columns: repeat(2, 10fr);
+  grid-gap: 10px;
+}
+
+.formulario {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
 .contenedor {
   width: 500px;
 }
@@ -18,4 +29,11 @@ mat-form-field, input {
 button {
   margin-top: 2rem;
   width: 40%;
+}
+
+
+@media all and (max-width: 950px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
