ADD: login/register methods

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <mat-card class="formulario">
-  <h1>Login</h1>
+  <h1>Login</h1><br><br>
 
   <form (submit)="onLogIn(userForm)" #userForm="ngForm">
     <mat-form-field appearance="legacy">
@@ -7,6 +7,7 @@
       <input type="email" matInput name="email"
         placeholder="pepito@perez.com"
         [ngModel]="user.email"
+        pattern="[^ @]*@[^ @]*"
         #email="ngModel"
         required
       >
@@ -27,6 +28,5 @@
     <button type="submit" mat-raised-button color="primary" >
       Ingresar
     </button>
-    <br><br>
   </form>
 </mat-card>
