ADD: id of user in product

--- a/frontend/src/app/pages/header/header.component.html
+++ b/frontend/src/app/pages/header/header.component.html
@@ -6,6 +6,8 @@
     <li *ngIf="isAuth"><a mat-button routerLink="/add" routerLinkActive="mat-basic">Nuevo Producto</a></li>
     <li *ngIf="!isAuth"><a mat-button routerLink="/login" routerLinkActive="mat-basic">Login</a></li>
     <li *ngIf="!isAuth"><a mat-button routerLink="/register" routerLinkActive="mat-basic">Register</a></li>
-    <li *ngIf="isAuth"><a mat-button routerLinkActive="mat-basic" (click)="onLogOut()" >Cerrar Sesión</a></li>
+    <li *ngIf="isAuth">
+      <a mat-stroked-button routerLinkActive="mat-warn" (click)="onLogOut()" >Cerrar Sesión</a>
+    </li>
   </ul>
 </mat-toolbar>
