ADD: verify admin role - Frontend

--- a/frontend/src/app/components/form-product/form-product.component.html
+++ b/frontend/src/app/components/form-product/form-product.component.html
@@ -54,10 +54,10 @@
       <br>
 
       <button type="submit" mat-raised-button color="primary" >
-        <div *ngIf="isEditMode">Editar</div>
+        <div *ngIf="isEditMode">Actualizar</div>
         <div *ngIf="!isEditMode">Agregar</div>
       </button>
-      <a mat-raised-button routerLink="/products" color="warn" >Salir</a>
+      <a mat-raised-button routerLink="/products" color="warn" >Cancelar</a>
     </form>
     <br>
     </mat-card>
