--- a/frontend/src/app/pages/header/header.component.html
+++ b/frontend/src/app/pages/header/header.component.html
@@ -3,7 +3,7 @@
   <span class="spacer"></span>
   <ul>
     <li><a mat-button routerLink="/products" routerLinkActive="mat-basic">Productos</a></li>
-    <li *ngIf="isAuth"><a mat-button routerLink="/add" routerLinkActive="mat-basic">Nuevo Producto</a></li>
+    <li *ngIf="isAdmin"><a mat-button routerLink="/add" routerLinkActive="mat-basic">Nuevo Producto</a></li>
     <li *ngIf="!isAuth"><a mat-button routerLink="/login" routerLinkActive="mat-basic">Login</a></li>
     <li *ngIf="!isAuth"><a mat-button routerLink="/register" routerLinkActive="mat-basic">Register</a></li>
     <li *ngIf="isAuth">
