--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -40,5 +40,9 @@
     <button type="submit" mat-raised-button color="primary" >
       Crear Cuenta
     </button>
+    <br><br>
+    <p>
+      <a routerLink="/login">¿Ya tienes cuenta? Inicia Sesión</a>
+    </p>
   </form>
 </mat-card>
