ADD: delete favs

--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="products.length === 0" >
-  <h1><strong>No tiene ningun producto en Favoritos</strong></h1>
+  <h1><strong>No tienes ningun producto en favoritos</strong></h1>
   <img class="img-notfound" src="https://cdn.shortpixel.ai/spai/w_898+q_lossy+ret_img/https://www.eude.es/wp-content/uploads/2021/04/Disen%CC%83o-sin-ti%CC%81tulo-32-820x450.png" alt="Not Found">
 </div>
 
