ADD: delete users

--- a/frontend/src/app/components/admin/admin.component.html
+++ b/frontend/src/app/components/admin/admin.component.html
@@ -8,7 +8,7 @@
     <span>
       <button mat-stroked-button color="primary" *ngIf="user.permiso?.includes( 'admin' )">Quitar Admin</button>
       <button mat-stroked-button color="primary" *ngIf="!user.permiso?.includes( 'admin' )">Dar Admin</button>
-      <button mat-stroked-button color="warn">Eliminar</button>
+      <button mat-stroked-button color="warn" (click)="removeUser( user._id )">Eliminar</button>
     </span>
   </div>
 
