--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -15,7 +15,7 @@
         <mat-card-title>{{ product.title }} - <strong>$ {{ product.price }}</strong></mat-card-title>
         <mat-card-content><br>{{ product.description }}</mat-card-content>
         <mat-card-actions>
-          <button mat-stroked-button color="accent" (click)="removeFav(product._id)" >Eliminar de Favoritos</button>
+          <button mat-stroked-button color="warn" (click)="removeFav(product._id)" >Eliminar de Favoritos</button>
           <br><br>
         </mat-card-actions>
       </mat-card>
