ADD: Index page

--- a/frontend/src/app/pages/header/header.component.html
+++ b/frontend/src/app/pages/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <a mat-button routerLink=""><mat-icon>shopping_bag</mat-icon> e-commerce</a>
+  <a mat-button routerLink=""><mat-icon>shopping_bag</mat-icon> Nueva Primavera</a>
   <ul>
     <li *ngIf="isAuth && !isAdmin"><a mat-button routerLink="/fav" routerLinkActive="mat-basic"><mat-icon>account_circle</mat-icon> {{ userName }}</a></li>
     <li *ngIf="isAdmin"><a mat-button routerLink="/admin" routerLinkActive="mat-basic"><mat-icon>account_circle</mat-icon> {{ userName }}</a></li>
