--- a/frontend/src/app/pages/index/index.component.html
+++ b/frontend/src/app/pages/index/index.component.html
@@ -1,1 +1,10 @@
-<h1>index works!</h1>
+<h1><strong>Bienvenido a Nueva Primavera</strong></h1>
+<br>
+<p>
+  Si deseas comprar asesorios unicos para tu telefono o deseas comprarte uno nuevo, has llegado al lugar correcto.
+  <br><br>
+  Hemos creado este sitio web con el fin de poder estar mas cerca de ti y asi puedas estar al tanto de todos los productos que tenemos a tu disposicion. sabemos lo importante que es para ti tener un lugar apartado donde encuentres todos los productos de tu interes, es por esto que tambien puedes <a routerLink="/register" routerLinkActive="mat-basic">registrarte</a> en nuestra web y puedas empezar a crear tu lista de favoritos ya!!.
+</p><br><br>
+<a mat-raised-button color="primary" routerLink="/products">Ver Productos</a>
+<br><br>
+<img src="https://sites.google.com/site/accesoriosparacelularesptoasis/_/rsrc/1534575925459/mym-tienda-movil-puerto-asis/punto%20de%20venta.jpg" alt="" width="500">
